client/index.less
@darkgradient: linear-gradient(292deg, wheat, gray);
@lightgradient: linear-gradient(292deg, rgba(10, 238, 238, 0.97), wheat);
@dropshadow: 8px 8px 4px rgba(0,0,0,0.75);
@playercolor: rgba(4, 184, 255, 0.75);
@spaceborderwidth: 5px;
@controlcolor: rgba(111, 108, 108, 0.6);

body{
  background-image: url('/assets/marmot.jpg');
  background-size: 100px;
  background-repeat: repeat;
  font-family: helvetica;
  font-weight: 100;
  -webkit-font-smoothing: antialiased;
}
#container{
  text-align: center;
  margin: 0 auto;
  background-color: rgba(130, 125, 125, 0.6);
}
#controls{
  color: white;
  display: inline-block;
  margin: 5px auto;
}
#title{
  font-family: helvetica;
  font-weight: 600;
  -webkit-box-shadow: @dropshadow;
  padding: 10px;
  color: @playercolor;
  background-color: @controlcolor;
  display: inline-block;
}
#players{
  margin: 0 auto;
  letter-spacing: 2px;
  font-size: 25px;
  padding: 5px;
  -webkit-box-shadow: @dropshadow;
  background-color: @controlcolor;
  border: 5px transparent solid;
}
.player{
  margin: auto 20px;
}
#p1{
  background-color: rgba(233, 75, 9, 0.75);
}
#p2{
  background-color: rgba(36, 36, 36, 0.75);
}
@media (min-width: 600px) or (orientation: landscape){
  .player{
    display: block;
  }
  #p1count, #p2count{
    display: inline;
  }
}
@media(max-width: 600px) or (orientation: portrait){
  .player{
    display: inline;
  }
  #p1count, #p2count{
    display: block;
  }
}
#winmessage{
  border: 5px red solid;
  color: black;
  margin: 100px;
  font-size: 25px;
  display: none;
}
#checkersboard{
  display: inline-block;
}
.space{
  width: 75px;
  height: 75px;
  margin: 4px;
  -webkit-box-shadow: @dropshadow;
  border: @spaceborderwidth transparent solid;
}
.black{
  background-image: @darkgradient;
  background-size: 90px;
  background-origin: border-box;
}
.white{
  background-image: @lightgradient;
  background-size: 90px;
  background-origin: border-box;
}
.p1-pawn{
  background-image: url('/assets/marmot-red.png'), @darkgradient;
  background-position: bottom;
  background-size: 60px, 90px;
  background-origin: border-box;
  background-repeat: no-repeat;
  border: @spaceborderwidth transparent solid;
}
.p2-pawn{
  background-image: url('/assets/marmot-black.png'), @darkgradient;
  background-position: bottom;
  background-size: 60px, 90px;
  background-origin: border-box;
  background-repeat: no-repeat;
  border: @spaceborderwidth transparent solid;
}
.p1-king{
  background-image: url('/assets/grizzly-red.png'), @darkgradient;
  background-position: bottom;
  background-size: 35px, 90px;
  background-origin: border-box;
  background-repeat: no-repeat;
  border: @spaceborderwidth transparent solid;
}
.p2-king{
  background-image: url('/assets/grizzly-black.png'), @darkgradient;
  background-position: bottom;
  background-size: 35px, 90px;
  background-origin: border-box;
  background-repeat: no-repeat;
  border: @spaceborderwidth transparent solid;
}
.activeplayer{
  border: 5px @playercolor solid;
}
.highlightedspace{
  border: @spaceborderwidth @playercolor solid;
}
.debughighlight{
  border: @spaceborderwidth @playercolor dashed;
}

